Task#38:(fix) component alignment

--- a/ui/MorganizerUI/src/app/to-do-list/to-do-list.component.scss
+++ b/ui/MorganizerUI/src/app/to-do-list/to-do-list.component.scss
@@ -37,7 +37,7 @@
 }
 .edit-task-icon {
   cursor: pointer;
-  color: green;
+  color: gray;
 }
 .task-card {
   // to-do
